--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -2,20 +2,20 @@
 /*              Grid Layout                      */
 /* ============================================= */
 
-
 .container {
+  // Positioning
+  justify-content: center;
+  padding-right: .5rem;
+  padding-left: .5rem;
+
+  // Display & Box Model
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, min-content));
-  grid-row: auto;
-  justify-content: center;
-  padding-right: 1rem;
-  padding-left: 1em;
-  width: auto;
-  margin: 0 auto;
+  grid-template-rows: 200px;
   gap: 1.5rem;
+
+  // Other
   & a  {
   @include img-effect();
   }
 }
-
-
