--- a/scss/components/_search_bar.scss
+++ b/scss/components/_search_bar.scss
@@ -9,7 +9,7 @@
   padding: 10px;
   width: 45%;
   border-radius: 5px;
-  border: 1.5px solid #3a4f33;
+  border: 2px solid #3a4f33;
   color: #33414f;
 
   &:focus,
