--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,12 +1,12 @@
-/* ============================================= */
-/*              Mixins                           */
-/* ============================================= */
+// =============================================
+//              Mixins
+// =============================================
 
-// Images pop effect
+// Gives Images pop effect
 @mixin img-effect() {
   //margin: 0 auto;
   transition-duration: .6s;
-  transition-delay: .2s;
+  //transition-delay: .2s;
 
   &:hover,
   &:focus {
